test/invalid/union_unfinished.d
//T error: union_unfinished.d:4:9:
//T error: expected CloseBrace, not the end of the file.

union U {
